test/compilable/checkimports3.d
/*
REQUIRED_ARGS: -de
TEST_OUTPUT:
---
---
*/
import imports.checkimports3a;
import imports.checkimports3b;
import imports.checkimports3c;

void test()
{
    foo();
}
